Fixed spacing in style.css and in script.js

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,4 +1,3 @@
-
 /*#content {
   margin-left: auto;
   margin-right: auto;
@@ -7,11 +6,20 @@
 
 #greeting-container {
   margin-top: 20px;
+}*/
+body{   color:rgb(253, 253, 253);
+        text-align: center;
+        background-image: url(NewImages/leaf.jpg);
+     }
+
+div{
+    background-image: linear-gradient(to bottom right, rgb(0, 0, 0), rgb(95, 141, 95));
+    border-color: black;
+    margin-right:15px;
+    margin-left: 15px;
+    
 }
-
-
-*/
-
+        
 header{
     float: top;
     background-size: 100% 100%;
@@ -28,28 +36,10 @@ nav{  float:top;
       font-size: 3em; 
       text-align: center;   
 }
-
 nav a {
   font-weight: normal;
   padding: 10px 5px;
   font-size: .80em;
 }
-
-
 a:hover{text-decoration: none;
         color:silver}
-
-
-body{   color:rgb(253, 253, 253);
-        text-align: center;
-        background-image: url(NewImages/leaf.jpg);
-     }
-        
-
-div{
-    background-image: linear-gradient(to bottom right, rgb(0, 0, 0), rgb(95, 141, 95));
-    border-color: black;
-    margin-right:15px;
-    margin-left: 15px;
-    
-}
